Fix horizontal and vertical tabs styles Vertical tabs where having issues when the text was too long

--- a/app/_assets/stylesheets/index.css
+++ b/app/_assets/stylesheets/index.css
@@ -332,7 +332,7 @@
   }
 
   .tab-button {
-    @apply flex text-sm max-h-11 box-border;
+    @apply flex text-sm box-border;
   }
 
   .tab-button--active {
@@ -340,7 +340,7 @@
   }
 
   .tab-button__horizontal {
-    @apply tab-button py-3 text-terciary hover:no-underline items-center;
+    @apply tab-button py-3 text-terciary hover:no-underline items-center max-h-11;
 
     &.tab-button__horizontal--active {
       @apply tab-button--active border-b-2 -mb-0.5 !important;
@@ -348,7 +348,7 @@
   }
 
   .tab-button__vertical {
-    @apply tab-button py-2 px-5 text-terciary hover:no-underline border-l-2 border-transparent;
+    @apply tab-button py-2 px-5 text-terciary hover:no-underline border-l-2 border-transparent flex-wrap block;
 
     &.tab-button__vertical--active {
       @apply tab-button--active !important;
